feat: small changes

--- a/projects/mfe-loss-report/src/app/loss-report/loss-report.component.html
+++ b/projects/mfe-loss-report/src/app/loss-report/loss-report.component.html
@@ -1,6 +1,6 @@
 <div class="p-3 border1 bg-light1">
   <div class="h3">File a Claim Hello</div>
-  <div>Select type of loss, chat or call 1800-000-XXX</div>
+  <div>Select type of loss, chat or call 1800-000-XXX.</div>
   <section class="my-3">
     <div class="form-check">
       <input
